# heterorefactor

./: .gitignore  Dockerfile  Makefile  README.md
Synthesis Reports/3D/: rendering_sw_csynth_guard.rpt  rendering_sw_csynth_programmer.rpt
Synthesis Reports/Bubble/: bubbleSort_csynth_guard.rpt  bubbleSort_csynth_original.rpt
Synthesis Reports/Face Detection/: face_detect_sw_csynth_guard.rpt
experiments/FP/: README.md  (+2 more)
heterorefactor/: Makefile
heterorefactor/refactoring/: CMakeLists.txt  Makefile
heterorefactor/refactoring/include/: access_transformer.h  exclusion_finder.h  localvar_packer.h  misc_utils.h  recursion_finder.h  recursive_invariant_parser.h  resource.h  stack_tracker.h  transform_propagator.h  type_transformer.h
heterorefactor/refactoring/recursive/: CMakeLists.txt
heterorefactor/refactoring/recursive/include/: allocate_transformer.h  ast_utils.h  exclusion_finder.h  resource.h  transform_propagator.h  type_transformer.h
heterorefactor/refactoring/recursive/runtime/: hls-buddy-alloc.c
heterorefactor/refactoring/recursive/src/: main.cpp  misc_utils.cpp  resource.cpp
heterorefactor/refactoring/recursive/src/access_transformer/: access_tools.cpp
heterorefactor/refactoring/recursive/src/ast_utils/: all_reference.cpp  all_used_functions.cpp  pointer_propagate.cpp  transform_func_decl.cpp
heterorefactor/refactoring/recursive/src/exclusion_finder/: addressof.cpp  interface.cpp  propagate.cpp
heterorefactor/refactoring/recursive/src/transform_propagator/: transform_propagator.cpp
heterorefactor/refactoring/recursive/src/type_transformer/: func_param.cpp  func_return.cpp  recursive_transform_array.cpp  type_transformer.cpp  typecast.cpp
heterorefactor/refactoring/runtime/: hls-buddy-alloc.c  trace-alloc.c
heterorefactor/refactoring/src/: localvar_packer.cpp  main.cpp  misc_utils.cpp  recursion_finder.cpp  recursive_invariant_parser.cpp  resource.cpp  stack_tracker.cpp
heterorefactor/refactoring/src/access_transformer/: access_transformer.cpp  get_alloc_runtime_of.cpp  get_storage_of.cpp
heterorefactor/refactoring/src/ast_utils/: all_reference.cpp  all_used_vars.cpp  pointer_propagate.cpp
heterorefactor/refactoring/src/exclusion_finder/: array.cpp  exclusion_finder.cpp  interface.cpp  pointer_cast.cpp  propagate.cpp
heterorefactor/refactoring/src/type_transformer/: binary_operations.cpp  func_return.cpp  get_transformation_of.cpp  recursive_transform.cpp  recursive_transform_array.cpp  type_transformer.cpp  typecast.cpp  var_decl.cpp
(+764 files in other folders)
